# HorizonRL-Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  INTERVIEW_QA.md  LICENSE  README.md  RESUME_PROJECT.md  SYSTEM_MANUAL.md  chatgpt_suggestion.md  claude-bypass.bat  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: code-reviewer.md  test-generator.md
.claude/commands/: check-imports.md  demo.md  eval.md  review.md  test.md  train.md
.claude/rules/: architecture.md  code-style.md  testing.md
.claude/skills/security-review/: SKILL.md
.github/workflows/: ci.yml  test.yml
benchmarks/: evaluator.py  tasks.jsonl
configs/: default.yaml  dev.yaml  eval.yaml
docs/archive/: paper_outline_archived.md
examples/: 01_async_demo.py  02_simple_agent.py  03_llm_demo.py  04_multi_agent_research.py  05_web_agent.py  06_ablation_study.py  07_benchmark.py
plugins/: example_plugin.py  github_search.py  pubmed_search.py  retrieval_tool.py  rss_feed.py
src/horizonrl/: __init__.py
src/horizonrl/agent/: __init__.py  planner.py  replanner.py  verifier.py  worker.py  writer.py
src/horizonrl/config/: settings.py
src/horizonrl/eval/: __init__.py
src/horizonrl/llm/: __init__.py  client.py
src/horizonrl/logging/: __init__.py  trajectory_logger.py
src/horizonrl/memory/: __init__.py  hierarchical_memory.py  research_context.py  vector_store.py
src/horizonrl/orchestration/: __init__.py  dag_workflow.py
src/horizonrl/plugins/: __init__.py  base.py  registry.py
src/horizonrl/rag/: __init__.py  document_store.py  parser.py
src/horizonrl/schemas/: __init__.py  event.py  report.py  result.py  task.py
src/horizonrl/services/: __init__.py  research_service.py
src/horizonrl/tools/: __init__.py  arxiv_search.py  code_execution.py  manager.py  mock.py  paper_search.py  web_search.py
src/horizonrl/web/: __init__.py  app.py  models.py  session_manager.py
src/horizonrl/web/routes/: chat.py  documents.py  report.py  sessions.py  settings.py  stream.py
tests/: conftest.py  test_config.py  test_dag_workflow.py  test_data_source_plugins.py  test_imports.py  test_memory.py  test_planner.py  test_plugins.py  test_rag.py  test_replanner.py  test_session_manager.py  test_tools_manager.py  test_trajectory_logger.py  test_verifier.py  test_web_api.py  test_worker.py  test_writer.py
(+5 files in other folders)
