[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horizonrl-agent"
version = "0.1.0"
description = "Long-Horizon Agentic RL System for stable multi-agent deep research"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "HorizonRL Team"}
]
keywords = [
    "reinforcement-learning",
    "llm-agents",
    "multi-agent",
    "langgraph",
    "grpo",
    "long-horizon",
    "hierarchical-memory",
    "deep-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "faiss-cpu>=1.8.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
rl = [
    "trl>=0.12.0",
    "verl>=0.4.0",
    "accelerate>=0.34.0",
    "torch>=2.4.0",
]
inference = [
    "vllm>=0.6.0",
]
eval = [
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]
all = [
    "horizonrl-agent[rl,inference,eval,dev]",
]

[project.urls]
Homepage = "https://github.com/horizonrl/horizonrl-agent"
Repository = "https://github.com/horizonrl/horizonrl-agent.git"
Documentation = "https://github.com/horizonrl/horizonrl-agent/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
